--- a/conda.yaml
+++ b/conda.yaml
@@ -4,6 +4,7 @@ channels:
 dependencies:
   - numpy=1.14.3
   - pandas==0.23.0
+  - matplotlib==3.0.3
   - pandas-profiling==1.4.1
   - scikit-learn==0.19.1
   - shap==0.28.5
