--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-numpy==1.16.2
-pandas==0.24.2
+numpy==1.14.3
+pandas==0.23.0
 matplotlib==3.0.3
 pandas-profiling==1.4.1
-scikit-learn==0.20.3
+scikit-learn==0.19.1
+mlflow==0.8.1
 shap==0.28.5
 
